# Ablage-System

./: .claudeignore  .coverage  .dockerignore  .env.example  .env.production.example  .env.rag.example  .gitattributes  .gitignore  .openapi-mutations.txt  .pre-commit-config.yaml  .prettierignore  .releaserc.json  .secrets.baseline  .yamllint.yml  =2.0.0  ANALYSIS_DETAILED_FINDINGS.md  ANALYSIS_ENTERPRISE_ROADMAP.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_FEATURE_DEPTH.md  ANALYSIS_TECHNICAL_DEBT.md  API_REFERENCE.md  ARCHITECTURE.md  AUTH_DOCUMENTATION.md  AUTH_QUICKSTART.md  Ablage_Mahnwesen-Plan  Ablage_Struktur-Plan.md  BUILD_SUMMARY_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  DEPLOYMENT.md  Dockerfile  FAANG-Audit2.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPL_REPORT.md  IMPROVEMENT_PLAN_SUMMARY.md  KNOWLEDGE_ARCHITECTURE.md  (+62 more)
.claude/: .claudecontext  .clauderc  CLAUDE.md  Frontend-Architecture.md  Frontend-Design.md  ORCHESTRATION_ENTERPRISE_PLAN.md  claude code structure preperation.md  plan.md  ralph-loop.local.md  settings.json  settings.local.json
.claude-flow/: .gitignore  config.yaml
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/tasks/: store.json
.claude/Docs/: ARCHITECTURE.md  FEATURE_ROADMAP_INTERVIEW_2026.md  GPU_Performance_Baseline.md  INFRASTRUCTURE_HARDENING.md  ML_ROUTING.md  OCR_Pipeline_Architecture.md  QDRANT_AB_TESTING_GUIDE.md  README.md
.claude/agents/: api-designer.md  bug-hunter.md  code-reviewer.md  database-expert.md  devops-agent.md  doc-writer.md  frontend-expert.md  haiku-task.md  memory-updater.md  modular-memory-updater.md  ocr-specialist.md  opus-task.md  performance-optimizer.md  plan-breakdown.md  refactoring-expert.md  security-auditor.md  session-documenter.md  sonnet-implementation.md  testing-expert.md
.claude/auto-memory/: README.md  config.json
.claude/cache/: cache_stats.json  metrics.json  orchestrated_task.txt  shared_state.json
.claude/commands/: add-feature.md  auto-swarm.md  check-system.md  cost-report.py  db-seed.md  debug-gpu.md  deploy-check.md  docu.md  enterprise-audit.md  find-doc.md  force-opus.py  force-sonnet.py  generate-api-docs.md  implement-agent.md  implement-kasse-module.md  kasse.md  load-test.md  monitor-setup.md  ocr-benchmark.md  orchestration_commands.py  process-doc.md  quick-test.md  ralph-loop.md  review-pr.md  security-scan.md  setup-dev.md  test-webapp.md  validate-german.md
.claude/helpers/: team_executor.py
.claude/hooks/: __init__.py  auto_orchestration_hook.py  claude_task_interceptor.py  config.json  feature_detection.py  orchestration_hook.py  post-ocr-change.py  post_plan_mode.py  (+4 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  zap-rules.tsv
.swarm/: schema.sql  state.json
Claude/: Error-Handling-Logging.md  Security&Authentication.md
Execution_Layer/: __init__.py
Firmendaten/: KUNDEN_BEREINIGUNG.xlsx  LIEFERANTEN_BEREINIGUNG.xlsx  kunden_konflikte_analyse.json  kunden_konflikte_zur_bearbeitung.xlsx  lieferanten_konflikte_analyse.json
Meta_Layer/: Round_11_Documentation_Summary.md
Trainings_Data/: count_files.ps1
alembic/: env.py
app/: german_validator.py  gpu_manager.py  main.py  populate_samples.py
browser-diagnostics/: dashboard-2025-12-31T05-12-26.html
config/: chunking.yaml
docker/: Dockerfile.mustang  Dockerfile.paddleocr-batch  Dockerfile.paddleocr-test  Dockerfile.paddleocr-vl-test  Dockerfile.worker  Dockerfile.worker-cpu  entrypoint.sh
docs/: ADMIN_GUIDE.md  AGENT_ARCHITECTURE.md  AGENT_IMPLEMENTATION_GUIDE.md  CHANDRA_OCR_INFO.md  COMPREHENSIVE_TEST_CHECKLIST.md  CONFIG_REFERENCE.md  DOCTR_INFO.md  ENTERPRISE_AUDIT_REPORT.md  FAQ.md  FEATURE_IMPLEMENTATION_DIGITAL_TWIN_DATA_QUALITY.md  INFRASTRUCTURE_STATUS.md  OCR_BACKEND_STATUS.md  OCR_EVALUATION_2025.md  OLMOCR2_INFO.md  PADDLEOCR_COMMERCIAL_INFO.md  PADDLEOCR_PP_OCRv5_INFO.md  QWEN_VL_COMMERCIAL_INFO.md  README.md  RELEASE_AUTOMATION.md  SURYA_COMMERCIAL_INFO.md  ULTRA_TEST_ANALYSIS_GUIDE.md  USER_GUIDE.md  build.sh  collaboration-frontend-implementation.md  mkdocs.yml  requirements.txt  serve.sh
examples/: rate_limiting_examples.py
frontend/: .dockerignore  .env.example  Dockerfile  admin.js  app.js  docker-entrypoint.sh  eslint.config.js  index.html  nginx-security-headers.conf  nginx-server-common.conf  nginx.conf  package-lock.json  package.json  percy.config.js  playwright.config.ts  playwright.perception.config.ts  styles.css  tailwind.config.js  tsconfig.app.json  tsr.config.json  verify_phase6.sh  versions.js  vite.config.ts  vitest.config.ts
frontend_legacy/: admin.css  admin.html  api.js  app.js  auth.js  search.js
infrastructure/: README.md  __init__.py
notebooks/: .gitkeep
playwright-report/: index.html  results.json
scripts/: api-docs.sh  backup-metrics-collector.sh  backup.sh  benchmark_llm_models.py  benchmark_paddleocr_vl.py  bootstrap_project.py  build.sh  celery-queue-monitor.py  compare_all_ocr_backends.py  create_admin.py  create_zm_table.py  create_zm_table.sql  data-consistency-check.py  db-migrate-check.sh  db-reset.sh  db-seed.sh  deploy-check.sh  dev.sh  download_test_documents.py  example_auth_client.py  generate-lan-tls.sh  generate-mtls-certs.sh  generate_missing_embeddings.py  generate_paddleocr_vl_report.py  generate_test_documents.py  gpu_diagnostics.py  imap_check.py  import_training_samples.sql  import_wa_we.py  lint.sh  load-test.sh  migrate_sqlite_to_postgres.py  migrate_to_qdrant_rest.py  migrate_ultraplan_to_vault.ps1  monitor-setup.sh  ocr_content_comparison.json  odoo_golive_check.py  populate_training_samples.py  post-release.sh  prepare-release.sh  (+32 more)
security/: blocked_hashes.txt
tests/: COVERAGE_STATUS.md  README.md  conftest.py  test_api.py  test_auth.py  test_basic.py  test_rate_limiting.py
(+24446 files in other folders)
