[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ablage-system-ocr"
version = "1.0.0"
description = "Enterprise-grade German document processing with GPU-accelerated OCR"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ablage-System Team", email = "info@ablage-system.local"}
]
maintainers = [
    {name = "Ablage-System Team", email = "info@ablage-system.local"}
]
keywords = [
    "ocr",
    "german",
    "document-processing",
    "gpu-acceleration",
    "deepseek",
    "got-ocr",
    "surya",
    "fastapi",
    "docker",
    "enterprise"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "pillow>=10.1.0",
    "numpy>=1.26.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "hvac>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.6",
    "safety>=3.0.0",
    "ipython>=8.19.0",
    "ipdb>=0.13.13",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-minify-plugin>=0.7.2",
    "pymdown-extensions>=10.5",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    "factory-boy>=3.3.0",
]
ml = [
    # ML-basiertes OCR-Routing (optional)
    # System fällt gracefully auf regelbasiertes Routing zurück wenn nicht installiert
    "xgboost>=2.0.0",
]

[project.urls]
Homepage = "https://docs.ablage-system.local"
Documentation = "https://docs.ablage-system.local"
Repository = "https://github.com/ablage-system/ablage-system-ocr"
"Bug Tracker" = "https://github.com/ablage-system/ablage-system-ocr/issues"
Changelog = "https://github.com/ablage-system/ablage-system-ocr/blob/main/CHANGELOG.md"

[project.scripts]
ablage-system = "app.main:main"

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Enable Pyflakes (`F`) and pycodestyle (`E`) codes by default
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "S101",   # Use of assert detected
    "S104",   # Possible binding to all interfaces
    "S105",   # Possible hardcoded password
    "S106",   # Possible hardcoded password
    "S107",   # Possible hardcoded password
    "PLR0913", # Too many arguments
    "TRY003", # Avoid specifying long messages outside the exception class
]

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert detected
    "ARG",    # Unused function args
    "PLR2004", # Magic value used in comparison
]
"migrations/**/*.py" = ["ANN", "E501"]

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "minio.*",
    "celery.*",
    "redis.*",
    "hvac.*",
    "prometheus_client.*",
    "xgboost.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers for organizing tests
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "gpu: Tests requiring GPU",
    "slow: Slow running tests",
    "asyncio: Async tests",
    "database: Tests requiring database",
    "redis: Tests requiring Redis",
    "minio: Tests requiring MinIO",
    "metrics: Backend metrics tests",
    "fallback: GPU fallback scenario tests",
    "windows: Windows-specific tests",
    "experimental: Experimental features under evaluation",
    "gpu_required: Tests that require GPU (will skip if not available)",
]

# Addopts - options to always use
# Note: Coverage options moved to separate invocation to allow running tests without pytest-cov
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--maxfail=5",
    "--tb=short",
    "-v",
]

# To run with coverage: pytest --cov=app --cov-report=term-missing --cov-branch

# Asyncio configuration
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Enterprise-Grade: Coverage-Schwelle auf 90% für Production-Qualität
# Critical Paths sollten 95%+ haben (separat validiert)
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Bandit Configuration (Security Linter)
# =============================================================================

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]  # Skip assert_used, paramiko_calls

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

# =============================================================================
# Black Configuration (Backup - Ruff is primary formatter)
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''
